# rust_sweb

common/include/console/: kprintf.h
common/include/kernel/: syscall-definitions.h
common/source/: CMakeLists.txt
common/source/console/: kprintf.cpp
common/source/kernel/: Syscall.cpp
common/source/rust/: CMakeLists.txt  Cargo.toml
common/source/rust/.cargo/: config.toml
common/source/rust/src/: allocator.rs  console.rs  lib.rs
userspace/tests/: add.c
